added clickable functions for create and delete.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,7 +4,7 @@ body{
 .navbarlogo{
 
     font-family: Chalkduster;
-    font-size: larger;
+    font-size: xx-large;
 }
 .nb{
     background: steelblue;
