--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -27,6 +27,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/posts">Show the posts</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/posts/create">Create Post</a>
+        </li>
       </ul>
     </div>
   </div>
