--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -3,14 +3,14 @@
 <head th:replace="partials :: head ('Create a post')"></head>
 
 <body>
-<navbar th:replace="partials :: navbar"></navbar>
+<nav th:replace="partials :: navbar"></nav>
 <div class="container">
     <h1>Create A Post</h1>
     <form action="/posts/create" method="post">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title"/>
+        <input type="text" id="title" name="title">
         <label for="description">Description:</label>
-        <input type="text" id="description" name="description"/>
+        <input type="text" id="description" name="description">
         <input type="submit" class="btn">
     </form>
 </div>
