--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="partials :: head ('Create a post')"></head>
 
 <body>
 <nav th:replace="partials :: navbar"></nav>
 <div class="container">
     <h1>Create A Post</h1>
-    <form action="/posts/create" method="post">
+    <form th:action="@{/posts/save}" th:method="post" th:object="${post}">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title">
+        <input type="text" id="title" name="title" th:field="*{title}">
         <label for="description">Description:</label>
-        <input type="text" id="description" name="description">
+        <input type="text" id="description" name="description" th:field="*{description}">
+        <input type="hidden" th:field="*{id}">
         <input type="submit" class="btn">
     </form>
 </div>
