--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <!--header-->
 <head th:fragment = "head (title)">
@@ -27,16 +27,25 @@
         <li class="nav-item">
           <a class="nav-link" href="/posts">Show the posts</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" sec:authorize="isAuthenticated()">
           <a class="nav-link" href="/posts/create">Create Post</a>
         </li>
+        <li sec:authorize="!isAuthenticated()" class="nav-item">
+          <a class="nav-link" href="/register">Register</a>
+        </li>
+        <li sec:authorize="!isAuthenticated()" class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-link"><form sec:authorize="isAuthenticated()" class="ms-auto d-flex" th:action="@{/logout}" th:method="POST">
+          <input type="submit" value="logout">
+        </form></li>
       </ul>
     </div>
   </div>
 </nav>
 
 <!--footer-->
-<footer th:fragment="footer" class="footer-bg d-flex justify-content align-items-center mt-auto">
+<footer th:fragment="footer" class="footer-bg d-flex justify-content-between align-items-center mt-auto">
   <p>This is where I would put foot links....IF I HAD ANY!!!!! DINKLEBURG!!!!!</p>
 </footer>
 
