--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="partials :: head ('Welcome...!.')">
+<head th:replace="partials :: head (${#authentication.principal.username})">
 </head>
 <body class="main-container main-bg">
 <nav th:replace="partials :: navbar"></nav>
 <main class="container">
-<h1>Welcome To Posters!!!</h1>
+    <h1 th:text="|Welcome, ${#authentication.principal.username}!|"></h1>
+    <h2 th:text="|Email: ${#authentication.principal.email}|"></h2>
 </main>
 <footer th:replace="partials :: footer"></footer>
 <div th:replace="partials :: foot-script"></div>
