beginning project for blog

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -45,7 +45,7 @@
 </nav>
 
 <!--footer-->
-<footer th:fragment="footer" class="footer-bg d-flex justify-content-between align-items-center mt-auto">
+<footer th:fragment="footer" class="footer-bg d-flex justify-content-between mt-auto">
   <p>This is where I would put foot links....IF I HAD ANY!!!!! DINKLEBURG!!!!!</p>
 </footer>
 
