--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
 <nav th:replace="partials :: navbar"></nav>
 <main class="container">
 <h1>Welcome To Posters!!!</h1>
+    <h2>add some more detail and make it like a blog</h2>
 </main>
 <footer th:replace="partials :: footer"></footer>
 <div th:replace="partials :: foot-script"></div>
